--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,53 +7,15 @@
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="Para:"
-        app:layout_constraintStart_toStartOf="@+id/final"
-        app:layout_constraintTop_toTopOf="@+id/final" />
-
-    <RadioButton
-        android:id="@+id/temperaturaF2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:text="Fahrenheit"
-        app:layout_constraintBaseline_toBaselineOf="@+id/temperaturaC2"
-        app:layout_constraintStart_toEndOf="@+id/temperaturaC2" />
-
-    <RadioButton
-        android:id="@+id/temperaturaC2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="16dp"
-        android:text="Celcius"
-        app:layout_constraintBottom_toBottomOf="@+id/final"
-        app:layout_constraintStart_toStartOf="@+id/final" />
-
-    <RadioButton
-        android:id="@+id/temperaturaK2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="16dp"
-        android:text="Kelvin"
-        app:layout_constraintBottom_toBottomOf="@+id/final"
-        app:layout_constraintEnd_toEndOf="@+id/final" />
-
     <EditText
         android:id="@+id/valor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="23dp"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintStart_toStartOf="@+id/inicial"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:text="valor" />
 
@@ -61,72 +23,94 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="76dp"
         android:text="insira um valor para converter:"
+        android:textSize="20sp"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@+id/valor"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioButton
-        android:id="@+id/temperaturaF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:text="Fahrenheit"
-        app:layout_constraintBaseline_toBaselineOf="@+id/temperaturaC"
-        app:layout_constraintStart_toEndOf="@+id/temperaturaC" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="23dp"
-        android:text="Converter de:"
-        app:layout_constraintStart_toStartOf="@+id/inicial"
-        app:layout_constraintTop_toTopOf="@+id/inicial" />
-
-    <RadioButton
-        android:id="@+id/temperaturaC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginBottom="15dp"
-        android:text="Celcius"
-        app:layout_constraintBottom_toBottomOf="@+id/inicial"
-        app:layout_constraintStart_toStartOf="@+id/inicial" />
-
-    <RadioButton
-        android:id="@+id/temperaturaK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="15dp"
-        android:text="Kelvin"
-        app:layout_constraintBottom_toBottomOf="@+id/inicial"
-        app:layout_constraintEnd_toEndOf="@+id/inicial" />
 
     <RadioGroup
-        android:id="@+id/inicial"
-        android:layout_width="0dp"
-        android:layout_height="122dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="62dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        android:id="@+id/temperatura"
+        android:layout_width="312dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/cParaF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Celsius para Fahrenheit"
+            tools:layout_editor_absoluteX="157dp"
+            tools:layout_editor_absoluteY="270dp" />
+
+        <RadioButton
+            android:id="@+id/cParaK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Celsius para Kelvin" />
+
+        <RadioButton
+            android:id="@+id/kParaF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kelvin para Fahrenheit"
+            tools:layout_editor_absoluteX="64dp"
+            tools:layout_editor_absoluteY="270dp" />
+
+        <RadioButton
+            android:id="@+id/kParaC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Kelvin para Celsius" />
+
+        <RadioButton
+            android:id="@+id/fParaC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fahrenheit para Celsius"
+            tools:layout_editor_absoluteX="256dp"
+            tools:layout_editor_absoluteY="270dp" />
+
+        <RadioButton
+            android:id="@+id/fParaK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Fahrenheit para Kelvin" />
+
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="47dp"
+        android:text="Calcular"
+        app:layout_constraintBottom_toTopOf="@+id/resultado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/valor" />
+        app:layout_constraintTop_toBottomOf="@+id/temperatura" />
 
-    <RadioGroup
-        android:id="@+id/final"
-        android:layout_width="0dp"
-        android:layout_height="96dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginBottom="289dp"
+    <TextView
+        android:id="@+id/resultado"
+        android:layout_width="145dp"
+        android:layout_height="93dp"
+        android:layout_marginBottom="84dp"
+        android:hint="Resultado"
+        android:textAlignment="center"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
