--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,83 +8,83 @@
 
 
     <EditText
-        android:id="@+id/valor"
+        android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
         android:ems="10"
         android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/temperature"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:text="valor" />
+        tools:text="valor"/>
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="76dp"
-        android:text="insira um valor para converter:"
+        android:text="@string/title"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="normal|bold"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="@+id/valor"
+        app:layout_constraintBottom_toTopOf="@+id/value"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <RadioGroup
-        android:id="@+id/temperatura"
-        android:layout_width="312dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginBottom="23dp"
+        android:id="@+id/temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/value">
 
         <RadioButton
-            android:id="@+id/cParaF"
+            android:id="@+id/celsiusForFahrenheit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Celsius para Fahrenheit"
+            android:text="@string/radio_btn1"
             tools:layout_editor_absoluteX="157dp"
             tools:layout_editor_absoluteY="270dp" />
 
         <RadioButton
-            android:id="@+id/cParaK"
+            android:id="@+id/celsiusForKelvin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Celsius para Kelvin" />
+            android:text="@string/radio_btn2" />
 
         <RadioButton
-            android:id="@+id/kParaF"
+            android:id="@+id/kelvinForFahrenheit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kelvin para Fahrenheit"
+            android:text="@string/radio_btn3"
             tools:layout_editor_absoluteX="64dp"
             tools:layout_editor_absoluteY="270dp" />
 
         <RadioButton
-            android:id="@+id/kParaC"
+            android:id="@+id/kelvinForCelsius"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kelvin para Celsius" />
+            android:text="@string/radio_btn4" />
 
         <RadioButton
-            android:id="@+id/fParaC"
+            android:id="@+id/fahrenheitForCelsius"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fahrenheit para Celsius"
+            android:text="@string/radio_btn5"
             tools:layout_editor_absoluteX="256dp"
             tools:layout_editor_absoluteY="270dp" />
 
         <RadioButton
-            android:id="@+id/fParaK"
+            android:id="@+id/fahrenheitForKelvin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Fahrenheit para Kelvin" />
+            android:text="@string/radio_btn6" />
 
     </RadioGroup>
 
@@ -92,25 +92,39 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="47dp"
-        android:text="Calcular"
-        app:layout_constraintBottom_toTopOf="@+id/resultado"
+        android:text="@string/btn_calculate"
+        app:layout_constraintBottom_toTopOf="@+id/result"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/temperatura" />
+        app:layout_constraintTop_toBottomOf="@+id/temperature" />
 
     <TextView
-        android:id="@+id/resultado"
+        android:id="@+id/result"
         android:layout_width="145dp"
         android:layout_height="93dp"
-        android:layout_marginBottom="84dp"
-        android:hint="Resultado"
+        android:hint="@string/text_result"
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
